Starting to write the hardware section

--- a/eecs-thesis-template-main/common/references/references.bib
+++ b/eecs-thesis-template-main/common/references/references.bib
@@ -275,5 +275,17 @@
   year   = {2023}
 }
 
+@INPROCEEDINGS{RTLSDRspecs,
+  author={Vildyaeva, Maria V. and Egorova, Elizaveta A. and Vavrenyuk, Aleksandr B.},
+  booktitle={2020 IEEE Conference of Russian Young Researchers in Electrical and Electronic Engineering (EIConRus)}, 
+  title={Using a Neural Network to Convert a Radio Signal from an RTL-SDR Receiver to Text}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={1449-1451},
+  keywords={RTL2832},
+  doi={10.1109/EIConRus49466.2020.9039046}}
+
+
 
 
