Progress on hardware methodology and design along with rewriting of background

--- a/eecs-thesis-template-main/common/references/references.bib
+++ b/eecs-thesis-template-main/common/references/references.bib
@@ -81,17 +81,6 @@
   doi       = {10.1109/RADAR.2008.4654009}
 }
 
-@inproceedings{DABsingleRadar,
-  author    = {Barott, William C. and Engle, Justin},
-  booktitle = {2014 IEEE Radar Conference},
-  title     = {Single-antenna ATSC passive radar observations with remodulation and keystone formatting},
-  year      = {2014},
-  volume    = {},
-  number    = {},
-  pages     = {0159-0163},
-  keywords  = {Digital TV;Time-frequency analysis;Spaceborne radar;Passive radar;Surveillance},
-  doi       = {10.1109/RADAR.2014.6875576}
-}
 
 @article{detectionDABmodulation,
   author  = {Poullin, D.},
@@ -285,6 +274,56 @@
   pages={1449-1451},
   keywords={RTL2832},
   doi={10.1109/EIConRus49466.2020.9039046}}
+
+@incollection{SDRgeneralInfo,
+  title = {Software-Defined Radio},
+  author = {Vijay K. Garg},
+  booktitle = {Wireless Communications \& Networking},
+  year = {2007},
+  publisher = {Elsevier},
+  note = {Accessed: 2024-08-20},
+  url = {https://www.sciencedirect.com/topics/engineering/software-defined-radio}
+}
+
+@INPROCEEDINGS{SDRsoftware,
+  author={González-Barbone, Víctor and Belzarena, Pablo and Larroca, Federico},
+  booktitle={2018 XIII Technologies Applied to Electronics Teaching Conference (TAEE)}, 
+  title={Software Defined Radio: From Theory to Real World Communications}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={1-7},
+  keywords={Education;Hardware;Software defined radio},
+  doi={10.1109/TAEE.2018.8476109}}
+
+@misc{SDRmoduleComparison,
+    author = {Dilusha Samarasekara},
+    publisher = {Radio Society of Sri Lanka},
+    title = {Popular SDRs},
+    year = {2023},
+    url = {https://rssl.lk/2023/07/18/popular-sdrs/},
+    note = {Accessed: 2024-08-20}
+}
+
+@ARTICLE{KrakenSDR,
+  author={Cass, Stephen},
+  journal={IEEE Spectrum}, 
+  title={Passive Radar With the KrakenSDR > Spot stuff with TV antennas and a software-defined radio}, 
+  year={2022},
+  volume={59},
+  number={11},
+  pages={16-18},
+  keywords={Interference;TV;Passive radar;Tuners;Reflection;Transmitting antennas;Software radio},
+  doi={10.1109/MSPEC.2022.9941039}}
+
+@misc{pimoroni_nvme_base,
+  author       = {{Pimoroni}},
+  title        = {NVMe Base},
+  year         = 2024,
+  url          = {https://shop.pimoroni.com/products/nvme-base?variant=41219587178579},
+  note         = {Accessed: 2024-08-20}
+}
+
 
 
 
