--- a/eecs-thesis-template-main/thesis/sections/01_body/01_background.tex
+++ b/eecs-thesis-template-main/thesis/sections/01_body/01_background.tex
@@ -141,37 +141,59 @@ Where:
 
 
 \section{Radio Hardware}
-Given the low cost aims of this project, hardware cost and performance is a major consideration. Luckily, the proliferation of Software Defined Radio (SDR) has enabled low cost hardware modules enabling easy access to radio frequency (RF) signals \cite{SDRtheory}.
+Given the low cost aims of this testbed, hardware cost and performance is a major consideration. Luckily, the proliferation of general purpose Software Defined Radio (SDR) hardware modules has enabled easy access to radio frequency (RF) signals \cite{SDRtheory}. In general, a SDR system can exist purely as a receiver (lower cost modules) or as a transceiver, whereby connected software (e.g. PC) are utilised for the modulation and demodulation of signals \cite{SDRgeneralInfo}. The SDR system can be used to sample the RF signal, and then process it digitally, enabling the use of a wide range of software tools for further signal processing. Typically, as seen in the block diagram below in figure \ref{fig:SDRblock}, SDR's comprise of an analogue front end, an analogue to digital converter (ADC) / digital to analagoue convertor (DAC), and some sort of band processing \cite{SDRgeneralInfo}.
 
-\todo[inline]{More specifics about SDR}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.8\textwidth]{sdrBlockDiagram.jpg}
+    \caption{Block diagram of SDR transceiver \cite{SDRgeneralInfo}}
+    \label{fig:SDRblock}
+\end{figure}
+
 
 \par \vspace{0.5cm}
-The most popular and lowest cost SDR module is the RTL-SDR, which is a USB dongle that can be used to receive and decode a wide range of RF signals. The RTL-SDR is based on the Realtek RTL2832U chipset, and has a frequency range of 24MHz to 1.7GHz, and a bandwidth of 3.2MHz. The RTL-SDR is also relatively cheap, with a price of around \$40 AUD. Moreover, the RTL-SDR is compatible with a wide range of software, including MATLAB, and GNU radio \cite{SDRdongle}. Given the digital nature of the DAB+ signal, the direct reference signal and the target surveillance signal can in theory be sampled by a singular RTL2832U module as shown by Barrot et.al \cite{DABsingleRadar}.
+The most popular and lowest cost SDR module is the RTL-SDR, which is a USB dongle that can be used to receive (note the RTL-SDR is RX only) and decode a wide range of RF signal bands. This includes FM radio, DAB, and DVB-T signals, which are all potential illuminators of opportunity for passive radar systems. Typical bandwidth of the RTL-SDR is 2.4MHz, and the frequency range is 24MHz to 1.7GHz \cite{SDRdongle}.
 
-\todo[inline]{Block diagram of SDR transceiver?}
+A plethora of other SDR modules exist, with varying costs and capabilities. A range of common SDR modules are listed in the table below \ref{tab:SDRcomparison}, along with their key specifications. 
 
-\par \vspace{0.5cm}
-There are also a range of other off the shelf SDR options such as BladeRF and LimeSDR, which provide marginally improved performance at a substantial increase in cost and hardware \cite{SDRhardware}.  Regardless of sampling hardware architecture, based on previous studies and the nature of the DAB+ signal and modulation framework, a sampling rate of 2.048\,MS/s is prudent \cite{IOTpassiveRadar}. This hardware can be scaled up, accordingly providing a reference antenna and a surveillance antenna, as seen in Yardleys 2007 DAB receiver project \cite{antennaArchitecture}. On the contrary, as a potential extension, the use of a single antenna can be attempted with additional reconstruction processing required (providing lower hardware cost), this has been achieved by Barott and Engle \cite{DABsingleRadar}.
+\begin{table}[h!]
+    \centering
+    \caption{Comparison of SDR's \cite{SDRmoduleComparison} \label{tab:SDRcomparison}}
+    \begin{tabular}{|l|l|l|l|l|}
+    \hline
+    \textbf{SDR} & \textbf{Frequency Range} & \textbf{Bandwidth} & \textbf{RX ADC} & \textbf{Sampling Rate} \\ \hline
+    \textbf{USRP} & 0-6 GHz & Up to 160 MHz & 12-14 bits & Up to 200 MS/s \\ \hline
+    \textbf{RTL-SDR} & 24 MHz - 1.75 GHz & Up to 2.4 MHz & 8 bits & Up to 3.2 MS/s \\ \hline
+    \textbf{bladeRF} & 47 MHz - 6 GHz & Up to 56 MHz & 12 bits & Up to 61.44 MS/s \\ \hline
+    \textbf{HackRF} & 1 MHz - 6 GHz & 20 MHz & 8 bits & Up to 20 MS/s \\ \hline
+    \textbf{LimeSDR} & 0.1 MHz - 3.8 GHz & 61.44 MHz & 12 bits & Up to 61.44 MS/s \\ \hline
+    \textbf{SDRplay} & 1 kHz - 2 GHz & Up to 10 MHz & 12 bits & Up to 10.66 MS/s \\ \hline
+    \textbf{KrakenSDR} & 24 MHz - 1.76 GHz & Up to 2.5 MHz & 8 bits & Up to 2.56 MS/s \\ \hline
+    \end{tabular}
+\end{table}
+
+As performance increases for the SDR's above so does the unit cost, which is an important consideration for the testbed design explored in scection \ref*{sec:hardware}. As seen in table \ref{tab:SDRcomparison}, other than the RTL-SDR all of the SDR's have a large bandwidth making them suitable for digital illuminators, furthemore, the ADC sampling bits are often larger, resulting in more more accurate signals. However, the increased resolution of an ADC also results in larger storage requirements and potentially bottlenecks in the processing chain \cite{SDRmoduleComparison}. Another interesting specification to note which is not seen on \ref*{tab:SDRcomparison} is the the number of RX channels. The RTL-SDR has one RX channel, whereas the USRP has two RX channels, which can be used to receive two signals simultaneously. This could be useful for the testbed, as it would allow for the simultaneous reception of the illuminator signal and the target signal, which could be used to improve the accuracy of the passive radar system. Specifically, the KrakenSDR features up to five channels, based on clustered RTL R820T2 tuners along with hardware to ensure the synchronisation of the channels \cite{KrakenSDR}. A key advantage of the KrakenSDR in passive radar receiver systems is their ability to achieve angle of direction measurements, which can be used to determine the location of the target as shown by Cass \cite{KrakenSDR}.
+
 
 
 \section{Digital Signal Processing}
-Broadly, the goal of the signal processing for general passive bistatic radar is to extract a range doppler map from a received signal. Obtaining a range doppler map involves a few steps, with specifics depending on the IOO chosen along with number of sampling channels. Furthermore, there is the option of autocorrelating these signals via correlation integrals which is the most time and compute intense, or through Batches algorithm in the frequency domain \todo{batches citation needed}. Prior to the advent of of digital broadcasts, analague broadcast processing involved comprehensive filtering and synchronisation of at least two input channels\cite{DSPfm}. However, more recently, given the nature of DAB / DVB-T and its COFDM modulation, filtering and synchronisation can be replaced with reconstruction of the surveillance signal \cite{DSPdab}, replacing the need for dual channel configuration. The use of a singular antenna / channel setup is affirmed by Barott et. al \cite{DABsingleRadar} who utilised DAB passive radar to track micro-UAVs.
+Broadly, the goal of the signal processing for general passive bistatic radar is to extract a range doppler map from a received signal. Obtaining a range doppler map involves a few steps, with specifics depending on the IOO chosen along with number of sampling channels. Furthermore, there is the option of autocorrelating these signals via correlation integrals which is the most time and compute intense, or through Batches algorithm in the frequency domain \todo{batches citation needed}. Prior to the advent of of digital broadcasts, analague broadcast processing involved comprehensive filtering and synchronisation of at least two input channels\cite{DSPfm}. However, more recently, given the nature of DAB / DVB-T and its COFDM modulation, filtering and synchronisation can be replaced with reconstruction of the surveillance signal \cite{DSPdab}, replacing the need for dual channel configuration. 
 
-\begin{wrapfigure}{r}{0.6\textwidth} % This places the figure on the right and occupies 60% of the text width
-    \centering
-    \includegraphics[width=0.45\textwidth]{DSPprocess.png}
-    \caption{Main steps of signal processing \cite{detectionDABmodulation}}
-    \label{fig:DSP}
-\end{wrapfigure}
-
-
+% NECESSARY IMAGE??
 \par \vspace{0.5cm}
 \noindent Figure \ref{fig:DSP} from Poullin \cite{detectionDABmodulation} shows the main steps of the required signal processing, which includes signal acquisition, reconstruction, and correlation. 
 
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.8\textwidth]{DSPprocess.png}
+    \caption{Main steps of signal processing \cite{detectionDABmodulation}}
+    \label{fig:DSP}
+\end{figure}
+
+
 \par \vspace{0.5cm} 
 \noindent Once signal has been demodulated, according to Moser et. al, a FFT the size of 2048 for the range domain and 512 for the doppler domain can be computed \cite{IOTpassiveRadar}, see Figure \ref{fig:FFT}. This can be combined with a decluttering chain, which can implement something along the lines of a weiner filter, or a matched filter, to remove unwanted signals from the range doppler map \cite{FundamentalsPassiveRadar}.
-
-\noindent Logically, the step above relfects the most computationally intensive process of the project ... hence, considerations with regard to signal processing algorithms will need to be taken in order to keep the overall detection system low cost. 
 
 \begin{figure}[htbp]
     \centering
@@ -180,16 +202,20 @@ Broadly, the goal of the signal processing for general passive bistatic radar is
     \label{fig:FFT}
 \end{figure}
 
-\todo[inline]{more general detail about the processing chain?}
+\noindent Logically, the step above relfects the most computationally intensive process of the project ... hence, considerations with regard to signal processing algorithms will need to be taken in order to keep the overall detection system low cost. 
 
+\todo[inline]{more general detail about the processing chain?}
 
 
 \section{IoT Architecture}
 \todo[inline]{keep section strictly about theory, not about specific hardware}
 
 The IoT architecture in the scope of this project refers to the computational platforms utilised to undertake the digital signal processing which then maps to tracking and detection of the target. Existing studies have demonstrated the ability of off the shelf laptops \cite{FMlowCost}, and there is a few studies that use IoT platforms for FM signal processing \cite{IOTpassiveRadar}. The vital consideration when exploring hardware is the DSP requirements of the bistatic passive detection process (explored further in the next section).
+
 \par \vspace{0.5cm} 
 \noindent According to Schupbach et. al \cite{DABprocessingChain}, the broad scope capability requirements of the computational platform and associated processing can be grouped into signal acquisition, signal reconstruction and then the correlation function calculation. 
+
+\todo[inline]{Table Comparing Embedded Platforms}
     
 \noindent A possible IoT device that could be used, and has evidence of previous use as demonstrated by Moser et. al \cite{IOTpassiveRadar} is the Raspberry Pi platform, which despite having increased processing times, demonstrated its functionality. An alternate, higher powered choice in which Sednall demonstrated is the higher powered Nvidia Jetson, which includes faster processing times due to its quad core architecture \cite{FMlowCost}. The price for these options is \$60 compared to \$250 respectively. Ultimately, the choice of embedded IoT hardware for the project can be reduced to the trade off between low cost and processing power, and will be a key consideration in the project plan. Furthermore, there is possibility to design custom hardware to optimise for processing speeds and project cost, for example, a PCB extension utilising a Raspberry Pi with DSP IC chips and/or custom user buttons.
 
