--- a/eecs-thesis-template-main/common/references/references.bib
+++ b/eecs-thesis-template-main/common/references/references.bib
@@ -324,6 +324,22 @@
   note         = {Accessed: 2024-08-20}
 }
 
+@misc{RTLSDRchipSet,
+  author       = {Superkuh},
+  title        = {RTL-SDR},
+  year         = {n.d.},
+  url          = {http://superkuh.com/rtlsdr.html},
+  note         = {Accessed: 2024-08-27}
+}
+
+@misc{RTLsdrBlockDiagram,
+  author       = {Konstanty Bialkowksi},
+  title        = {COMS4105 Prac 1},
+  year         = {2024},
+  howpublished = {University of Queensland},
+  note         = {Image retrieved from the assignment sheet}
+}
+
 
 
 
