Added an antenna section, need to complete the methodology section

--- a/eecs-thesis-template-main/common/references/references.bib
+++ b/eecs-thesis-template-main/common/references/references.bib
@@ -340,6 +340,18 @@
   note         = {Image retrieved from the assignment sheet}
 }
 
+@ARTICLE{AntennaIEEE,
+  author={},
+  journal={IEEE Std 145-1993}, 
+  title={IEEE Standard Definitions of Terms for Antennas}, 
+  year={1993},
+  volume={},
+  number={},
+  pages={1-32},
+  keywords={IEEE standards;Antennas;Terminology;antennas;definitions;propagation;terminology},
+  doi={10.1109/IEEESTD.1993.119664}}
+
+
 
 
 
